# vocabulary-vault

./: .gitignore  Dockerfile  PROJECT.md  README.md  ROADMAP.md  pyproject.toml  render.yaml  start.sh
backend/: .gitignore  requirements.txt
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  schemas.py
backend/app/routes/: achievements.py  books.py  dictionary.py  review.py  stats.py  words.py  wotd.py
backend/tests/: conftest.py  test_api.py  test_auth.py
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/achievements/: page.tsx
frontend/app/add/: page.tsx
frontend/app/books/: page.tsx
frontend/app/login/: page.tsx
frontend/app/review/: page.tsx
frontend/app/search/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/stats/: page.tsx
frontend/components/: app-shell.tsx  navbar.tsx
frontend/components/gamification/: achievement-toast.tsx  gamification-overlay.tsx  level-up-overlay.tsx  streak-display.tsx  xp-popup.tsx  xp-progress-ring.tsx
frontend/lib/: api.ts  types.ts
frontend/providers/: gamification-provider.tsx  query-provider.tsx
frontend/public/: manifest.json  offline.html
research/: auto-vocab-research.md  auto-vocab-ux-design.md  gamification-deep-dive.md  growth-and-monetization.md  naming-research-2.md  naming-research.md  smart-reading-companion.md  ux-audit.md
src/vocabulary_vault/: book_service.py  dictionary.py  word_service.py
tests/: test_book_service.py
(+3 files in other folders)
