[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vocabulary-vault"
version = "0.1.0"
description = "A CLI tool that turns reading into a vocabulary RPG"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[project.scripts]
vault = "vocabulary_vault.cli:vault"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vocabulary_vault = ["data/*.json"]
